--- a/clients/src/components/admin/AppContent/Account/AccountGrantPermissions/AccountGrantPermissions.scss
+++ b/clients/src/components/admin/AppContent/Account/AccountGrantPermissions/AccountGrantPermissions.scss
@@ -1,1 +1,25 @@
 @import '_setting.scss';
+
+.account-permissions {
+    &::-webkit-scrollbar {
+        -webkit-appearance: none;
+    }
+
+    &::-webkit-scrollbar:vertical {
+        width: 8px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: lighten($color: $theme-color, $amount: 5);
+        border-radius: $gap;
+    }
+
+    .section-header {
+        background-color: lighten($color: lightsalmon, $amount: 10);
+        color: rgb(224, 71, 10);
+        text-transform: uppercase;
+        font-weight: bold;
+        border-left: $gap solid orange;
+        padding: $gap/2;
+    }
+}
