--- a/clients/src/components/MultiChoices/question/Question.scss
+++ b/clients/src/components/MultiChoices/question/Question.scss
@@ -46,6 +46,20 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
         }
     }
 
+    .question-user {
+        height: 14vh;
+        width: 100%;
+        background-color: $question-content-background;
+        box-shadow: $box-shadow;
+        margin: $gap $gap * 2 0 $gap*2;
+        border-radius: $gap;
+        border: 2px solid $border-color;
+        line-height: 1.2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     .embeded {
         margin: $gap;
         height: 46vh;
@@ -80,6 +94,22 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
             border: 2px dashed $theme-color;
             border-radius: $gap;
             margin: $gap;
+        }
+    }
+
+    @media screen and (max-width: 992px) {
+        .question-user {
+            height: 10vh;
+        }
+
+        .embeded {
+            height: 37vh;
+
+            .question-embed {
+                img {
+                    height: 36vh;
+                }
+            }
         }
     }
 }
