--- a/clients/src/components/MultiChoices/MultiChoices.scss
+++ b/clients/src/components/MultiChoices/MultiChoices.scss
@@ -14,4 +14,18 @@
             padding-right: 0 !important;
         }
     }
+
+    
+    &::-webkit-scrollbar {
+        -webkit-appearance: none;
+    }
+
+    &::-webkit-scrollbar:vertical {
+        width: 8px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: lighten($color: $theme-color, $amount: 5);
+        border-radius: $gap;
+    }
 }
