--- a/clients/src/components/MultiChoices/panelQuestionPicker/PanelQuestionPicker.scss
+++ b/clients/src/components/MultiChoices/panelQuestionPicker/PanelQuestionPicker.scss
@@ -117,7 +117,7 @@
             bottom: 0px;
             z-index: 1000;
             position: fixed;
-            height: 9vh;
+            height: $question-picker-height;
             width: 100%;
             border-radius: 0px;
 
