--- a/clients/src/components/MultiChoices/question/Question.scss
+++ b/clients/src/components/MultiChoices/question/Question.scss
@@ -80,7 +80,6 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 
     .question-answers {
         height: 28vh;
-        max-height: 28vh;
         padding: 0 1vw 0 1vw;
     }
 
@@ -98,6 +97,7 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
     }
 
     @media screen and (max-width: 992px) {
+
         .question-user {
             height: 10vh;
             width: 98vw;
@@ -113,5 +113,11 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
                 }
             }
         }
+    }
+
+    @media screen and (max-width: 576px){
+        .question-answers {
+            height: fit-content;
+        }   
     }
 }
