--- a/clients/src/components/contest/contestInfo/ContestInfo.scss
+++ b/clients/src/components/contest/contestInfo/ContestInfo.scss
@@ -68,6 +68,7 @@ $container-list-tests-height: calc(100vh - #{$navbar-height} - #{$contest-title-
                         overflow-y: auto;
                         border: 1px dashed  gray;
                         border-radius: $gap;
+                        background-color: lighten($light-theme-color, 15);
                     }
 
                     .list-group-flush {
@@ -149,7 +150,7 @@ $container-list-tests-height: calc(100vh - #{$navbar-height} - #{$contest-title-
                     padding-right: 0 !important;
 
                     .card-test-index {
-                        background-color: #7af3d5;
+                        background-color: lighten($light-theme-color, 5);
                         display: flex;
                         align-items: center;
                         justify-content: center;
@@ -158,7 +159,7 @@ $container-list-tests-height: calc(100vh - #{$navbar-height} - #{$contest-title-
                         .test-index {
                             font-weight: bolder;
                             font-size: 2.5rem;
-                            color: rgb(228, 100, 50);
+                            color: $theme-color;
                         }
                     }
 
