--- a/clients/src/components/admin/AppSidebar/AppSidebar.scss
+++ b/clients/src/components/admin/AppSidebar/AppSidebar.scss
@@ -47,6 +47,7 @@
                         font-size: 1rem;
                         color: $theme-color;
                         text-transform: uppercase;
+
                         button {
                             text-align: start !important;
                         }
@@ -67,9 +68,10 @@
                             padding-left: 2rem !important;
                         }
 
-                        button:hover, button:focus, button:active {
+                        button:hover,
+                        button:focus,
+                        button:active {
                             background-color: $light-theme-color;
-                            // color: #6adf5f;
                         }
                     }
                 }
@@ -81,5 +83,11 @@
         left: 0 !important;
         bottom: 50% !important;
         margin: 0 !important;
+    }
+
+    @media screen and (max-width: 992px) {
+        .sidebar-section {
+            display: none;
+        }
     }
 }
