admin: responsive for contest

--- a/clients/src/components/admin/AppContent/Contest/ContestArchive/ContestArchived.scss
+++ b/clients/src/components/admin/AppContent/Contest/ContestArchive/ContestArchived.scss
@@ -27,6 +27,8 @@
         .dropdown-toggle {
             text-transform: capitalize;
             font-weight: bold;
+            width: 90px;
+            border-radius: $gap;
         }
     }
 }
