admin: responsive for account setting

--- a/clients/src/components/admin/Admin.scss
+++ b/clients/src/components/admin/Admin.scss
@@ -3,6 +3,10 @@
 .dashboard {
     margin-top: $navbar-height;
 
+    .row {
+        margin: 0px !important;
+    }
+
     .main-container {
 
         .header {
