reponsive for edit test page

--- a/clients/src/components/MultiChoices/MultiChoices.scss
+++ b/clients/src/components/MultiChoices/MultiChoices.scss
@@ -7,7 +7,7 @@
 
     .row {
         width: 100%;
-        margin: 0 !important;
+        margin: 0px !important;
 
         > * {
             padding-left: 0 !important;
@@ -31,5 +31,9 @@
     &::-webkit-scrollbar-thumb {
         background-color: lighten($color: $theme-color, $amount: 5);
         border-radius: $gap;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: #f1f1f1;
     }
 }
