--- a/clients/src/components/admin/AppSidebar/AppSidebar.scss
+++ b/clients/src/components/admin/AppSidebar/AppSidebar.scss
@@ -36,6 +36,10 @@
                 border-radius: $gap;
             }
 
+            &::-webkit-scrollbar-track {
+                background: #f1f1f1;
+            }
+
             .accordion-item {
                 .accordion-button {
                     padding: 0.75rem 0.75rem !important;
