--- a/clients/src/components/contest/statistics/StatisticTest.scss
+++ b/clients/src/components/contest/statistics/StatisticTest.scss
@@ -16,6 +16,10 @@
         border-radius: $gap;
     }
 
+    &::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+
     .section-header {
         background-color: lighten($color: lightsalmon, $amount: 10);
         color: rgb(224, 71, 10);
