--- a/clients/src/components/admin/AppSidebar/AppSidebar.scss
+++ b/clients/src/components/admin/AppSidebar/AppSidebar.scss
@@ -5,7 +5,7 @@
 
     .sidebar-main {
         width: 100%;
-        height: calc(100vh - #{$navbar-height});
+        height: 100vh;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
         .sidebar-title {
