--- a/clients/src/App.scss
+++ b/clients/src/App.scss
@@ -1,22 +1,28 @@
 @import '_setting.scss';
 
-input,
-textarea,
-button,
-body {
-    font-family: $body-font;
-    line-height: 1.3em;
-}
-
-button {
-    box-shadow: $box-shadow;
-}
-
 .app {
     &__body {
         margin-top: 80px;
     }
 
+    table {
+        td {
+            vertical-align: middle;
+        }
+    }
+
+    input,
+    textarea,
+    button,
+    body {
+        font-family: $body-font;
+        line-height: 1.3em;
+    }
+
+    button {
+        box-shadow: $box-shadow;
+    }
+    
     background-color: $app-bg-color;
     align-items: center;
     text-align: center;
@@ -36,12 +42,6 @@ button {
         overflow-y: hidden;
         resize: none;
         line-height: 1.6rem !important;
-    }
-
-    table {
-        td {
-            vertical-align: middle;
-        }
     }
 
     .tooltip-component {
@@ -76,5 +76,55 @@ button {
 
     .row {
         margin: 0px !important;
+    }
+
+    .app-vertical-scrollbar {
+        overflow-x: hidden;
+        overflow-y: auto;
+
+        &::-webkit-scrollbar {
+            -webkit-appearance: none;
+        }
+
+        &::-webkit-scrollbar:vertical {
+            width: 20px;
+            padding-left: $gap;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: lighten($color: lightgray, $amount: 5);
+            border-radius: $gap;
+            border: 7px solid $bg-color;
+
+            &:hover {
+                background-color: lighten($color: $theme-color, $amount: 5);
+            }
+        }
+
+        &::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
+    }
+
+    .app-horizontal-scrollbar {
+        overflow-x: auto;
+        overflow-y: hidden;
+
+        &::-webkit-scrollbar {
+            -webkit-appearance: none;
+        }
+
+        &::-webkit-scrollbar:horizontal {
+            height: 8px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: lighten($color: $theme-color, $amount: 5);
+            border-radius: $gap;
+        }
+
+        &::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
     }
 }
