--- a/clients/src/components/common/appNavbar/AppNavbar.scss
+++ b/clients/src/components/common/appNavbar/AppNavbar.scss
@@ -3,6 +3,8 @@
 /*=============== HEADER ===============*/
 /*=============== NAV ===============*/
 .navbar {
+    padding: 0px !important;;
+
     .container {
         .navbar-brand {
             padding-left: 4%;
