--- a/clients/src/components/common/login/Login.scss
+++ b/clients/src/components/common/login/Login.scss
@@ -8,6 +8,46 @@
     width: 920px;
     border-radius: 30px;
 
+
+    .nav__btn {
+
+        &__login {
+            border-radius: 50px;
+            width: auto;
+            font-size: 1rem;
+            border: 1px solid var(--mint);
+            color: var(--mint) !important;
+            background-color: white;
+            font-weight: 700;
+            padding: $gap/2;
+            margin: $gap/2 $gap;
+
+            &:hover {
+                color: white !important;
+                background-color: var(--light-mint);
+            }
+
+        }
+
+        &__signup {
+            border-radius: 50px;
+            width: auto;
+            font-size: 1rem;
+            color: white;
+            background-color: var(--mint);
+            padding: $gap/2 $gap;
+            margin: $gap/2 $gap;
+            border: 0px;
+            font-weight: 600;
+
+            &:hover {
+                color: var(--strong-mint);
+                background-color: var(--light-mint);
+            }
+        }
+
+    }
+
     .form__title {
         text-align: center;
         padding-top: 25px;
