--- a/clients/src/components/common/profile/Profile.scss
+++ b/clients/src/components/common/profile/Profile.scss
@@ -4,7 +4,10 @@
 
 
 .container {
-    margin: 80px auto 0 !important;
+    .profile{
+        margin: 80px auto 0;
+    }
+    
     font-family: var(--body-font);
     border: 1.5px solid var(--mint);
     height: fit-content;
